BiggestInt example